--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
-    <string name="app_name">PowerNapping</string>
+    <string name="app_name" translatable="false">PowerNapping</string>
+
+    <string name="name">name</string>
+    <string name="email">email</string>
+    <string name="password">password</string>
+    <string name="login">login</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="recreation">recreation</string>
+    <string name="relaxation">relaxation</string>
+    <string name="power">power</string>
+
+    <string name="library">Library</string>
+    <string name="home">Home</string>
+    <string name="timer">Timer</string>
+    <string name="favorite">Favorite</string>
+    <string name="dashboard">Dashboard</string>
 </resources>
