navigation, timer layout design

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- TODO: LoginScreen -->
     <string name="name">Name</string>
     <string name="email">Email</string>
-    <string name="password">Passwort</string>
-    <string name="login">login</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
 
+    <!-- TODO: SplashSreen -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recreation">Erholung</string>
     <string name="relaxation">Entspannung</string>
     <string name="power">Power</string>
 
-    <string name="library">Bibliothek</string>
+    <!-- TODO: BottomMenu -->
     <string name="home">Home</string>
     <string name="timer">Timer</string>
-    <string name="favorite">Favoriten</string>
+    <string name="favorite">Favorite</string>
     <string name="dashboard">Dashboard</string>
+
+    <!-- TODO: TimerFragment -->
+    <string name="restart">restart</string>
+    <string name="play">play</string>
+    <string name="power_nap">Power Nap</string>
+    <string name="check_feel_better">check: feel better?</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
 </resources>
