dashboard + checkFeeling, layout and functionality

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,6 +25,12 @@
     <string name="power_nap">Power Nap</string>
     <string name="check_feel_better">check: feel better?</string>
 
+    <!-- TODO: Dashboard -->
+    <string name="I_feel_good">Me siento bien.</string>
+
+    <!-- TODO: Timer Check Feeling -->
+    <string name="check">Check</string>
+    <string name="i_feel">Me siento</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <!-- TODO: Remove or change this placeholder text -->
