:) changes in layout, handling bottomMenuBar, error fixing in TimerFragment, installation Firebase

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -37,6 +37,9 @@
     <string name="maax_time">(máximo 60 mimutos)</string>
     <string name="min">min</string>
 
+    <!-- TODO: FavoritenFragment -->
+    <string name="Best_of_Musik">50 Best of Jamendo Music</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <!-- TODO: Remove or change this placeholder text -->
     <!-- TODO: Remove or change this placeholder text -->
