--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -32,15 +32,13 @@
     <string name="check">Check</string>
     <string name="i_feel">Ich fühle mich</string>
 
-    <!-- TODO: Pick Up Timer -->
+    <!-- TODO: Timer Picker-->
     <string name="select_nap_time">Wähle power nap time</string>
     <string name="maax_time">(max 60 Minuten)</string>
     <string name="min">min</string>
+    <string name="maxMinuten">(max. 60 Minuten)</string>
 
     <!-- TODO: FavoritenFragment -->
     <string name="Best_of_Musik">50 Best of Jamendo Music</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <!-- TODO: Remove or change this placeholder text -->
-    <!-- TODO: Remove or change this placeholder text -->
 </resources>
