--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,14 +32,13 @@
     <string name="check">Check</string>
     <string name="i_feel">I feel</string>
 
-    <!-- TODO: Pick Up Timer -->
-    <string name="select_nap_time">Selset power nap time</string>
-    <string name="maax_time">(max 60 minuites)</string>
+    <!-- TODO: Timer Picker-->
+    <string name="select_nap_time">Select power nap time</string>
+    <string name="maax_time">(max 60 minutes)</string>
     <string name="min">min</string>
+    <string name="maxMinuten">(max. 60 minutes)</string>
 
     <!-- TODO: FavoritenFragment -->
     <string name="Best_of_Musik">50 Best of Jamendo Music</string>
 
-
-    <!-- TODO: Remove or change this placeholder text -->
 </resources>
